--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "agileteknik/api-response": "^1.2",
+        "agileteknik/auth": "1.5.8",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0"
@@ -64,6 +67,12 @@
             "php-http/discovery": true
         }
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://repo.agileteknik.com"
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true
 }
